--- a/matrix.css
+++ b/matrix.css
@@ -5,14 +5,9 @@
 
 body {
 	background:black;
+	margin:0;padding:0;border:0 none;
 }
 
 canvas {
 	display: block;
-}
-
-html, body {
-  width:  100%;
-  height: 100%;
-  margin: 0px;
 }
